--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="container">
             <div class="hero-text-flex">
               <div class="hero-text-button">
-                <span class="hero-main-text-span"><h2 class="hero-main-text">Medium is a place to write, read, and connect</h2></span>
+                <span class="hero-main-text-span"><h2 class="hero-main-text" id="main-text">Medium is a place to write, read, and connect</h2></span>
                 <div class="hero-subtext">It's easy and free to post your thinking on any topic and connect with millions of readers.</div>
                 <div class="hero-button">
                   <button>Start Writing</button>
